--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack serve --open 8080",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --open 9000 --config webpack.dev.js",
     "server": "node server.js"
   },
   "repository": {
@@ -32,7 +32,8 @@
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-middleware": "^4.0.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.3.0"
   },
   "dependencies": {
     "lodash": "^4.17.20",
