--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
     "@babel/node": "^7.12.6",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "axios": "^0.21.0",
+    "css-loader": "^6.2.0",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "lodash": "^4.17.20",
+    "nodemon": "^2.0.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -52,6 +56,8 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.4",
     "typescript": "^4.1.2"
   }
 }
