--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/express": "^4.17.13",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-config": "^5.0.3",
+    "@types/react-router-dom": "^5.1.8",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "express": "^4.17.1",
